# InterpretableML-Comparisons

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  requirements.txt
conf/: main.yaml
conf/data/: base.yaml  openml.yaml
conf/exp/: base.yaml  optuna.yaml  simple.yaml
conf/model/: dt.yaml  fbts.yaml  j48graft.yaml  rerx.yaml  rulecosi.yaml  xgboost.yaml
conf/model/params/: dt.yaml  fbts.yaml  j48graft.yaml  rerx.yaml  rulecosi.yaml
conf/model/params/ensemble/: xgboost.yaml
conf/model/params/fbts/: default.yaml
conf/model/params/mlp/: default.yaml
conf/model/params/rerx/: default.yaml
conf/model/params/rulecosi/: default.yaml
conf/model/params/tree/: default.yaml
core/: __init__.py  classifier.py  experiment.py  optuna.py  utils.py
dataset/: __init__.py  occupancy.py  openml.py  tabular_dataframe.py  utils.py
script/: all.sh  delete_study.sh  dt.sh  fbts.sh  j48graft.sh  rerx.sh  rulecosi.sh  run_all.py
