[tool.poetry]
name = "InterpretableML-Comparisons"
version = "0.1.0"
description = ""
authors = ["somaonishi <somaonishi4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rerx = {path = "rerx", develop = true}
fbts = {path = "FBTs", develop = true}
rulecosi = {path = "rulecosi", develop = true}
optuna = "^3.4.0"
hydra-core = "^1.3.2"
openml = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
